@@ -1,0 +1,43 @@
+#ifndef PSANA_ORCA_DDL_H
+#define PSANA_ORCA_DDL_H 1
+
+// *** Do not edit this file, it is auto-generated ***
+
+#include <vector>
+#include "ndarray/ndarray.h"
+#include "pdsdata/xtc/TypeId.hh"
+namespace Psana {
+namespace Orca {
+
+/** @class ConfigV1
+
+  
+*/
+
+
+class ConfigV1 {
+public:
+  enum { TypeId = Pds::TypeId::Id_OrcaConfig /**< XTC type ID value (from Pds::TypeId class) */ };
+  enum { Version = 1 /**< XTC type version number */ };
+  enum { Row_Pixels = 2048 };
+  enum { Column_Pixels = 2048 };
+  enum ReadoutMode {
+    x1,
+    x2,
+    x4,
+    Subarray,
+  };
+  enum Cooling {
+    Off,
+    On,
+    Max,
+  };
+  virtual ~ConfigV1();
+  virtual Orca::ConfigV1::ReadoutMode mode() const = 0;
+  virtual Orca::ConfigV1::Cooling cooling() const = 0;
+  virtual int8_t defect_pixel_correction_enabled() const = 0;
+  virtual uint32_t rows() const = 0;
+};
+} // namespace Orca
+} // namespace Psana
+#endif // PSANA_ORCA_DDL_H
