@@ -1,0 +1,12 @@
+
+// *** Do not edit this file, it is auto-generated ***
+
+#include <cstddef>
+#include "psddl_psana/orca.ddl.h"
+namespace Psana {
+namespace Orca {
+
+ConfigV1::~ConfigV1() {}
+
+} // namespace Orca
+} // namespace Psana
