@@ -12,6 +12,9 @@ ConfigV1::~ConfigV1() {}
 ConfigV2::~ConfigV2() {}
 
 
+ConfigV3::~ConfigV3() {}
+
+
 DataV1::~DataV1() {}
 
 
